--- a/yes.html
+++ b/yes.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Yes mood</title>
+	<title>แด่เธอผู้งาม</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel = "icon" href = 
      "https://cdn-icons-png.flaticon.com/512/2865/2865523.png" 
